UI alignment related to the custom questions tab issue is fixed

--- a/src/components/testTabs/PrintTest/PrintTestTreeView.css
+++ b/src/components/testTabs/PrintTest/PrintTestTreeView.css
@@ -66,3 +66,8 @@
   left: 16px;
   margin-bottom: 10px;
 }
+
+.qti-choiceInteraction {
+  margin-top: 5px;
+  margin-bottom: 7px;
+}
